[package]
name = "cttt-parser"
description = "Parser for github.com/change-this-then-that"
version = "0.1.2"
edition = "2021"
rust-version = "1.67"
license="MIT"

[dependencies]
pest = "2.7.1"
pest_derive = "2.7.1"
serde = { version = "1.0.171", features = ["derive"] }


[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
